# qjmotor

./: .gitignore  CMakeLists.txt  README.md
doc/: 摩托车仪表-功能列表.xlsx  画面迁移.xlsx
env_cmake/: mac.cmake  win.cmake
lvgl/: lv_conf.h
lvgl/macos/: lv_conf.h
lvgl/win_lib/: lv_conf.h
src/: config.h  gui_lvgl.c  gui_lvgl.h  main.c  typedef.h
src/addons/: bracket_rect.h  gasoline_scale.c  gasoline_scale.h  mileage_roller.c  mileage_roller.h  rpm_scale.c  rpm_scale.h  setting.h  speed_info.c  top_info_bar.c  top_info_bar.h  water_scale.c  water_scale.h
src/frm/: frm_msg.h
src/gui/: gui_guider.c  gui_guider.h  gui_lvgl.c
src/guif/: guif_config.h  guif_if.c  guif_if.h  guif_pcc.c  guif_pcc.h  guif_pcm.c  guif_pcm.h  guif_plm.c  guif_plm.h  guif_preg.c  guif_preg.h
src/main_view/: main_view.c  main_view.h
src/menu/: menu_lv_1.c  menu_lv_1.h
src/screens/: home_scr.c  home_scr.h  menu_scr.c  menu_scr.h
src/themes/: color.c  color.h  text.c  text.h  themes.c  themes.h
src/widgets/: bracket_rect.c  rpm_scale.c  speed_info.h  top_info_bar.c
